# snake-arena

./: .env.example  AGENTS.md  README.Docker.md  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml
.github/workflows/: ci-cd.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: auth.py  config.py  database.py  db_models.py  init_db.py  main.py  models.py
backend/app/routers/: auth.py  games.py  leaderboard.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_leaderboard.py
backend/tests_integration/: conftest.py  test_auth_integration.py  test_games_integration.py  test_leaderboard_integration.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: GameBoard.tsx  Navigation.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: gameLogic.test.ts  gameLogic.ts
frontend/src/pages/: Index.tsx  Leaderboard.tsx  Login.tsx  Signup.tsx  Spectate.tsx
frontend/src/services/: api.test.ts  api.ts  mockApi.test.ts  mockApi.ts  types.ts
